Rework JEP 493
- Add Goal mentioning run-time image support
- Add Non-Goal mentioning run-time image and --module-path
- Clarify user-experience and output
- Propose to add output to `jlink --help` for discoverability
  of the feature
- Add an example with `--verbose`.